<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">TABBUCHE… Es algo diferente</string>
    <string name="hello_world">Hola mundo!</string>
    <!--<string name="action_settings">Configuraciones</string>-->
    <!--<string name="usuario">Usuario</string>-->
    <!--<<string name="contrasena">Contraseña</string>-->
    <string name="ingresar">Ingresar</string>
    <string name="limpiar">Limpiar</string>
    <string name="hint_usuario_login">Cedula de identidad..</string>
    <string name="hint_contrasena_login">Contraseña..</string>
    <string name="cerrar_sesion">"¿Desea cerrar sesion?"</string>
    <!--<<string name="btn_muestrario_home">Muestrario</string>
    <string name="btn_pedidos_home">Pedidos</string>
    <string name="btn_clientes_home">Clientes</string>-->
    <!--<<string name="btn_estadocuenta_home">Estados de cuenta</string>-->
    <!--<<string name="conectado_home">Conectado como: </string>
    <string name="title_activity_catalogo">Catalogo</string>
    <string name="title_activity_menuprincipal">Home</string>-->
    <string name="title_activity_home">Home</string>
    <string name="lineas">Lineas</string>
    <string name="modelos">Modelos</string>
    <string name="productos">Productos</string>
    <string name="nombre_producto">Nombre del producto:</string>
    <string name="cantidad_bulto_producto">Pares:</string>
    <string name="check_pedido">Agregar al pedido</string>
    <string name="color_producto">Color:</string>

    <string name="pedido_sin_talla" tools:ignore="StringFormatInvalid">No hay articulos de talla % agregados al pedido.</string>

    <string name="modificar_clientes">Modificar Clientes</string>
    <string name="agregar_clientes">Agregar Clientes</string>

    <string name="razon_social">Razon Social:</string>
    <string name="razon_social_hint">Ingrese una razon social..</string>
    <string name="direccion">Direccion:</string>
    <string name="direccion_hint">Ingrese una direccion..</string>
    <string name="estado">Estado:</string>
    <string name="telefono">Telefono:</string>
    <string name="telefono_hint">Ingrese un telefono..</string>
    <string name="fecha">Fecha</string>
    <string name="rif">RIF:</string>
    <string name="email">Email:</string>
    <string name="email_hint">Ingrese un email..</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="seleccionar_cliente">Seleccionar Cliente</string>
    <string name="buscar_cliente">Buscar cliente por razon social..</string>
    <string name="guion">-</string>
    <string name="precios_moneda">% $</string>

    <string name="confirmacion_editar_usuario">¿Desea editar sus datos?</string>

    <string name="confirmacion_agregar_cliente">¿Desea agregar este cliente?</string>
    <string name="olvide_contrasena">¿Olvido su contraseña?</string>
    <string name="email_restablecer">Ingrese su email</string>
    <string name="titulo_restablecer">Reestablecer contraseña</string>
    <string name="btn_ok">Enviar Email</string>
    <string name="btn_cancel">Cancelar</string>

    <string name="numeracion">Numeracion</string>
    <string name="producto_pedido">Producto</string>
    <string name="color_pedido">Color</string>
    <string name="pares_pedido">Pares por bulto</string>
    <string name="bultos_pedido">Bultos</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="precio_total">SubTotal</string>
    <string name="total_pedido">Monto total del pedido:</string>
    <string name="unidad_bolivar">Bs.F</string>



    <string name="sinPedidos">No hay pedidos realizados.</string>
    <string name="sinPedidosEncontrados">No se encontraron pedidos..</string>
    <string name="sinPedidosP">No hay articulos de talla P agregados al pedido.</string>
    <string name="sinPedidosM">No hay articulos de talla M agregados al pedido.</string>
    <string name="sinPedidosG">No hay articulos de talla G agregados al pedido.</string>
    <string name="verDetalles">Ver mas detalles</string>
    <string name="pedido_btn_1">Cancelar Pedido</string>
    <string name="pedido_btn_2">Eliminar Producto</string>
    <string name="pedido_btn_3">Realizar Pedido</string>
    <string name="pedido_btn_4">Edicion de Pedido</string>
    <string name="pedido_btn_5">Enviar Pedidos</string>
    <string name="pedido_btn_6">Agregar Producto</string>
    <string name="confirmacion_cancelar_pedido">¿Esta seguro que desea cancelar el pedido?</string>
    <string name="confirmacion_eliminar_producto">¿Esta seguro que desea eliminar % producto(s)?</string>
    <string name="confirmacion_agregar_producto">¿Esta seguro que desea agregar % producto(s)?</string>
    <string name="confirmacion_realizar_pedido">¿Esta seguro que desea realizar el pedido?</string>
    <string name="confirmacion_enviar_pedido">¿Esta seguro que desea enviar los pedidos?</string>
    <string name="confirmacion_editar_pedido">¿Esta seguro que desea editar el pedido?</string>

    <string name="actualizar_app">Actualizar datos</string>
    <string name="actualizar_application">Actualizar aplicacion</string>

    <string name="actualizar_app_dialogo">¿Desea actualizar los datos de la aplicacion?</string>
    <string name="actualizar_app_dialogo2">¿Desea verificar si hay una nueva version de la aplicacion?</string>
    <string name="actualizar_app_dialogo3">¡Ya posees la ultima version de la aplicacion!</string>
    <string name="actualizar_app_dialogo4">¿Deseas descargar e instalar la nueva version de la aplicacion?</string>
    <string name="actualizar_app_dialogo5">¡Actualizacion disponible!</string>
    <string name="onbackPressed_AddCliente">¿Esta seguro que desea volver sin guardar el cliente?</string>
    <string name="dialogo_editar_cliente">¿Esta seguro que desea editar este cliente?</string>
    <string name="boton_editar_cliente">Editar Cliente</string>

    <string name="btn_whatsapp">Compartir via WhatsApp</string>

    <string name="user_name">%1$s %2$s</string>

    
    <!-- Lista de opciones de navegacion-->
    <string-array name="opciones_home">
        <item >Home</item>
        <item >Muestrario</item>
        <item >Pedidos</item>
        <item >Clientes</item>
        <item >E_Cuenta</item>
        <item >Perfil</item>
        <item >Opciones</item>
    </string-array>
    
    <!-- Lista de iconos de navegacion-->
    <array name="navigation_iconos">
        <item>@drawable/ic_action_action_home</item>  <!-- Home -->
        <item>@drawable/ic_action_action_shopping_cart</item>  <!-- Muestrario -->
        <item>@drawable/ic_action_paste</item>   <!-- Pedidos -->
        <item>@drawable/ic_action_group</item> <!-- Clientes -->
        <item>@drawable/ic_action_view_as_list</item> <!-- Estados de cuenta -->
        <item>@drawable/ic_action_edit</item>  <!-- Perfil -->
        <item>@drawable/ic_action_settings</item>  <!-- Opciones -->
    </array>

    <!-- Lista de estados-->
    <array name="estados_lista">
        <item>Amazonas</item>
        <item>Anzoátegui</item>
        <item>Apure</item>
        <item>Aragua</item>
        <item>Barinas</item>
        <item>Bolivar</item>
        <item>Carabobo</item>
        <item>Cojedes</item>
        <item>Delta Amacuro</item>
        <item>Distrito Capital</item>
        <item>Falcón</item>
        <item>Guarico</item>
        <item>Lara</item>
        <item>Mérida</item>
        <item>Miranda</item>
        <item>Monagas</item>
        <item>Nueva Esparta</item>
        <item>Portuguesa</item>
        <item>Sucre</item>
        <item>Tachira</item>
        <item>Trujillo</item>
        <item>Yaracuy</item>
        <item>Zulia</item>
        <item>Vargas</item>
    </array>

    <!-- Lista de tipos de RIF-->
    <string-array name="rif_lista">
        <item >V</item>
        <item >E</item>
        <item >P</item>
        <item >J</item>
        <item >G</item>
    </string-array>

    <string name="imagen">Imagen</string>
    <string name="cliente">Cliente</string>
    <string name="monto">Monto</string>
    <string name="estatus">Estatus</string>
    <string name="datos_cliente">Datos del Cliente</string>
    <string name="observaciones">Observaciones</string>
    <string name="continuar">Continuar</string>
    <string name="eliminar_productos">Eliminar productos seleccionados</string>
    <string name="opcional_pedido">(Opcional)</string>
    <string name="seleccione_productos">Seleccione los productos que desee eliminar..</string>
    <string name="realizar_pedido">Realizar pedido</string>
    <string name="consultar_pedidos">Consultar pedidos</string>
    <string name="enviar_pedidos">Enviar pedidos pendientes</string>
    <string name="texto_pedido_consulta">\t\tA continuacion, se muestran un resumen de todos los pedidos realizados, puede ver los mas detalladamente el pedido haciendo click en el enlace \"Ver mas detalles\" de cada pedido respectivamente. \n \n \t\tPara los pedidos con estatus de \"Envio pendiente\", debe utilizarse el boton inferior para que estos pedidos se hagan efectivo, de lo contrario estos pedidos nunca estaran completos para su aprobacion.</string>
    <string name="detalles">Detalles</string>

    <string name="total_productos">Total de productos: </string>
    <string name="total_bultos">Total de bultos: </string>
    <string name="total_pares">Total de pares: </string>
    <string name="total_bultos_P">Total de bultos (P):</string>
    <string name="total_pares_P">Total de pares (P):</string>
    <string name="total_monto_P">Monto total (P):</string>

    <string name="total_bultos_M">Total de bultos (M):</string>
    <string name="total_pares_M">Total de pares (M):</string>
    <string name="total_monto_M">Monto total (M):</string>

    <string name="total_bultos_G">Total de bultos (G):</string>
    <string name="total_pares_G">Total de pares (G):</string>
    <string name="total_monto_G">Monto total (G):</string>
    <string name="editar_pedido">Editar Pedido</string>

    <string name="buscar_cliente_sp">Buscar por Cliente</string>
    <string name="buscar_estatus_sp">Buscar por Estatus </string>
    <string name="codigo_pedido">Codigo del Pedido </string>

    <string name="titulo_notificacion">% pedido(s) pendiente(s)</string>
    <string name="titulo_notificacion_descargarApp">¡Existe una version de la app mas actualizada! (%)</string>
    <string name="contenido_notificacion">Haga click aca para enviar los pedidos.</string>
    <string name="contenido_notificacion_descargarApp">Haga click aca para descargar la nueva version.</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="editar_usuario">Modificar datos</string>
    <string name="agregar_productos">Agregar productos seleccionados</string>
    <string name="seleccione_productos_agregar">Seleccione los productos que desea agregar..</string>
    <string name="destacado">Destacado</string>
    <string name="rb_new">Mostrar destacados</string>
    <string name="rb_old">Mostrar otros</string>
    <string name="rb_all">Mostrar todos</string>
    <string name="filter_menu">Filtrar</string>
    <string name="hint_filtrado_talla_nombre">Indique un nombre de talla.. (Por ej. 10, 12, 5000, 400)</string>
    <string name="cancelar">Cancelar</string>
    <string name="reestablecer_filtros">Reestablecer filtros</string>
    <string name="filtrar">Filtrar</string>
    <string name="nombre_de_la_talla">Nombre de la talla..</string>
    <string name="buscar_talla">Buscar talla</string>
    <string name="buscar_por_nombre">Buscar por nombre</string>

    <!-- Lista de tipos de estatus -->
    <string-array name="estatus_lista">
        <item >Todos</item>
        <item >En espera de aprobacion</item>
        <item >Envio Pendiente</item>
        <item >Aprobado</item>
        <item >Anulado</item>
        <item >Rechazado</item>
    </string-array>

</resources>
