<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:layout_marginTop="15dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal">

                    <com.devspark.robototextview.widget.RobotoTextView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_usuario"
                        android:textColor="#000000"
                        app:typeface="roboto_bold"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/nombre_perfil" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal">

                    <com.devspark.robototextview.widget.RobotoTextView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apellido"
                        android:textColor="#000000"
                        app:typeface="roboto_bold"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/apellido_perfil" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1">

                    <com.devspark.robototextview.widget.RobotoTextView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telefono"
                        android:textColor="#000000"
                        app:typeface="roboto_bold"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/telefono_perfil" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal">

                    <com.devspark.robototextview.widget.RobotoTextView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estado"
                        android:textColor="#000000"
                        app:typeface="roboto_bold"
                        android:textSize="18sp" />

                    <Spinner
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/estado" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <com.devspark.robototextview.widget.RobotoTextView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="#000000"
                        app:typeface="roboto_bold"
                        android:textSize="18sp" />

                    <EditText
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/email_perfil" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/espaciador"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_usuario"
                    android:id="@+id/btn_editar_usuario"
                    android:background="@drawable/boton_azul"
                    android:textStyle="normal"
                    style="@style/ButtonText"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>